@@ -17,6 +17,8 @@ import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.application.impl.LaterInvocator;
 import com.intellij.openapi.application.impl.NonBlockingReadActionImpl;
 import com.intellij.openapi.command.WriteCommandAction;
+import com.intellij.openapi.diagnostic.LogLevel;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.event.DocumentEvent;
@@ -71,6 +73,7 @@ import com.intellij.testFramework.common.ThreadUtil;
 import com.intellij.util.ArrayUtilRt;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.TestTimeOut;
+import com.intellij.util.ThrowableRunnable;
 import com.intellij.util.TimeoutUtil;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.concurrency.Semaphore;
@@ -117,6 +120,22 @@ public class PsiDocumentManagerImplTest extends HeavyPlatformTestCase {
     }
     finally {
       super.tearDown();
+    }
+  }
+
+  @Override
+  protected void runBareRunnable(@NotNull ThrowableRunnable<Throwable> runnable) throws Throwable {
+    Logger[] loggers = {Logger.getInstance(PsiDocumentManagerBase.class), Logger.getInstance(DocumentCommitThread.class)};
+    for (Logger logger : loggers) {
+      logger.setLevel(LogLevel.TRACE);
+    }
+    try {
+      super.runBareRunnable(runnable);
+    }
+    finally {
+      for (Logger logger : loggers) {
+        logger.setLevel(LogLevel.TRACE);
+      }
     }
   }
 
@@ -344,6 +363,7 @@ public class PsiDocumentManagerImplTest extends HeavyPlatformTestCase {
     PsiDocumentManagerEx psiDocumentManager = (PsiDocumentManagerEx)PsiDocumentManager.getInstance(myProject);
     List<FileViewProvider> cachedViewProviders = null;
     for (int i = 0; i < 30; i++) {
+      LOG.debug("i="+i);
       assertCommitted(document, true, "");
       cachedViewProviders = psiDocumentManager.getCachedViewProviders(document);
       WriteCommandAction.runWriteCommandAction(null, () -> {
@@ -353,10 +373,8 @@ public class PsiDocumentManagerImplTest extends HeavyPlatformTestCase {
       waitForCommits();
       WriteCommandAction.runWriteCommandAction(null, () -> document.deleteString(0, "/**/".length()));
       waitForCommits();
-      String dumpBefore = ThreadDumper.dumpThreadsToString();
       if (!getPsiDocumentManager().isCommitted(document)) {
-        System.err.println("Thread dump1:\n" + dumpBefore + "\n;Thread dump2:\n" + ThreadDumper.dumpThreadsToString());
-        fail("Still not committed: " + document);
+        fail("Still not committed: " + document+"; all uncommitted:"+getPsiDocumentManager().getUncommitedDocumentsWithTraces()+"; thread dump:"+ThreadDumper.dumpThreadsToString());
       }
     }
     Reference.reachabilityFence(cachedViewProviders); // to avoid calling handleCommitWithoutPsi() inside write action during doc.insertString()
@@ -1085,7 +1103,7 @@ public class PsiDocumentManagerImplTest extends HeavyPlatformTestCase {
           for (int i=0;i<5_000;i++) {
             PsiFile mainFile = findFile(createFile());
             Document doc = getDocument(mainFile);
-            psiDocumentManager.addRunOnCommit(doc, __ ->{
+            psiDocumentManager.addRunOnCommit(doc, _ ->{
               assertFalse(ApplicationManager.getApplication().isWriteAccessAllowed()); // sync commit runs in write action
             });
             WriteCommandAction.runWriteCommandAction(getProject(), () -> doc.insertString(0, " "));
@@ -1104,7 +1122,7 @@ public class PsiDocumentManagerImplTest extends HeavyPlatformTestCase {
     int rightLimit = 122; // letter 'z'
 
     Random random = new Random();
-    return IntStream.range(0, length / 10).flatMap(__->IntStream.concat(random.ints(leftLimit, rightLimit + 1)
+    return IntStream.range(0, length / 10).flatMap(_ ->IntStream.concat(random.ints(leftLimit, rightLimit + 1)
       .filter(i -> (i <= 57 || i >= 65) && (i <= 90 || i >= 97))
       .limit(10), IntStream.of(32)))
       .collect(StringBuilder::new, StringBuilder::appendCodePoint, StringBuilder::append)
@@ -1189,7 +1207,7 @@ public class PsiDocumentManagerImplTest extends HeavyPlatformTestCase {
       PsiDocumentManagerImpl psiDocumentManager = getPsiDocumentManager();
       psiDocumentManager.executeTestInProductionMode(() -> {
         try {
-          VirtualFile virtualFile = createTempFiles(1).get(0).getVirtualFile();
+          VirtualFile virtualFile = createTempFiles(1).getFirst().getVirtualFile();
           FileDocumentManager.getInstance().saveAllDocuments();
           TimeoutUtil.sleep(10); // make future running
           int N = 100;
